--- a/less/base.less
+++ b/less/base.less
@@ -24,16 +24,26 @@ img {
   border: none;
   vertical-algin: middle;
 }
+
 body,
 html {
   width: 100%;
+  height: 100%;
 }
-
+h1,
+h2,
+h3,
+h4,
+h5 {
+  font-weight: normal;
+}
 // 头部部分的样式
 #header {
+  position: relative;
   background-color: @mainColor;
   height: 50px;
   text-align: center;
+  z-index: 999;
   .logo {
     padding-top: 10px;
     padding-left: 15px;
@@ -62,10 +72,38 @@ html {
 
 #main {
   width: 100%;
-  height: 1300px;
+  min-height: 100%;
+}
+// 路径显示部分的样式
+#path-show {
+  margin-top: 20px;
+  height: 36px;
+  background-color: #ebebeb;
+  background: -webkit-gradient(linear, 0 0, 0 100%, from(#ffffff), to(#ebebeb));
+  border-top: solid 1px #ebebeb;
+  border-bottom: 1px solid #ccc;
+  line-height: 36px;
+  padding-left: 8px;
+  font-size: 14px;
+  margin-bottom: 20px;
+  color: #5a5a5a;
+  position: relative;
+  z-index: 999;
+  .path {
+    li {
+      float: left;
+      .fa-chevron-right {
+        font-size: 12px;
+        color: #5a5a5a;
+        font-weight: normal;
+      }
+    }
+  }
 }
 // 底部部分的样式
 #footer {
+  position: relative;
+  z-index: 999;
   .footer-nav {
     text-align: center;
     display: flex;
@@ -137,6 +175,25 @@ html {
     i {
       color: #5a5a5a;
       font-size: 25px;
+    }
+  }
+}
+// loading模块部分的样式
+#loading {
+  width: 100%;
+  min-height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1;
+  background-color: #fff1ce;
+  display: none;
+  .loading-img {
+    width: 80%;
+    margin: 100px auto;
+    img {
+      width: 100%;
+      position: relative;
     }
   }
 }
