--- a/less/index.less
+++ b/less/index.less
@@ -1,2 +1,46 @@
 // 引入公共部分的样式
 @import "./base.less";
+
+// 主体部分样式
+#main {
+  // 搜索模块的样式
+  .search {
+    position: relative;
+    z-index: 999;background-color: #fff;
+    padding: 10px 10px 0 10px;
+    border-bottom: 1px solid #e6e6e6;
+    form {
+      width: 100%;
+      .mui-search {
+        width: 90%;
+        input {
+          padding-right: 30px;
+        }
+      }
+      button {
+        width: 60px;
+        height: 34px;
+        position: absolute;
+        right: 10px;
+        top: 10px;
+        background-color: @mainColor;
+        color: white;
+        border-radius: 30px;
+      }
+    }
+  }
+  // 分类模块样式
+  .category {
+    .mui-row {
+      text-align: center;
+      padding-top: 10px;
+      li {
+        a {
+          img {
+            width: 50px;
+          }
+        }
+      }
+    }
+  }
+}
