--- a/less/index.less
+++ b/less/index.less
@@ -6,36 +6,47 @@
   // 搜索模块的样式
   .search {
     position: relative;
-    z-index: 999;background-color: #fff;
-    padding: 10px 10px 0 10px;
+    z-index: 999;
+    background-color: #fff;
+    padding: 10px 10px 10px 10px;
     border-bottom: 1px solid #e6e6e6;
-    form {
-      width: 100%;
-      .mui-search {
-        width: 90%;
+      .searchtxt {
+        //   height: 30px;
         input {
           padding-right: 30px;
+          padding-left: 25px;
+          text-align: left;  
+          border-radius: 20px;
+          background-color: #f1f1f1;
+          height: 30px;
+          width: 95%;
+          margin: 0;
+
         }
       }
-      button {
+      .btn-input {
         width: 60px;
-        height: 34px;
+        height: 30px;
         position: absolute;
-        right: 10px;
+        right: 15px;
         top: 10px;
         background-color: @mainColor;
         color: white;
         border-radius: 30px;
+        border: 0px;
       }
-    }
   }
   // 分类模块样式
   .category {
     .mui-row {
       text-align: center;
-      padding-top: 10px;
+      padding-top: 20px;
       li {
+        &.active {
+            display: none;
+        }  
         a {
+            display: block;
           img {
             width: 50px;
           }
@@ -43,4 +54,151 @@
       }
     }
   }
+  .a-jxhd {
+    display: block;
+    width: 100%;
+      .jxhd {
+          width: 100%;
+          height: 35px;
+          background-color: @mainColor;
+          padding: 5px 10px;
+          background: @mainGradient;
+          >span {
+              float: left;
+              color: #fff;
+              font-weight: 900;
+          }
+          >img {
+              float: right;
+              width: 20px;
+              padding-top: 2px; 
+          }
+
+      }
+
 }
+.jxhdc {
+    >ul {
+        .ui-border-b {
+          padding: 14px 8px;
+          position: relative;
+          border-bottom: 1px solid #e0e0e0;
+          >a {
+              display: block;
+              width: 100%;
+              .pic {
+                  float: left;
+                  width: 110px;
+                  img {
+                      width: 100px;
+                      height: 100px;
+                  }
+              }
+              .info {
+                  padding-left: 96px;
+                  padding-top: 10px; 
+                  .title {
+                      >span {
+                          color: #ff6c00;
+                      }
+                  }
+                  .other {
+                      line-height: 21px;
+                      font-size: 12px;
+                      color: #a1a1a1;
+                      margin-top: 40px;
+                      .mall {
+                          float: left;
+                      }
+                      .comment {
+                          float: right;
+                          text-align: center;
+                          .fa {
+                              text-align: center;
+                              font-size: 14px;
+                              vertical-align:middle;  
+                          }
+                          .pinglun {
+                              font-style: normal;
+                          }
+                      }
+                  }
+              }
+          }
+        }
+    }
+}
+.more_bar {
+    width: 100%;
+    text-align: center;
+    margin-bottom: 20px;
+    
+    >a {
+        display: block;
+        font-size: 13px;
+        line-height: 30px;
+        margin: 10px;
+        border: 1px solid #ddd;
+        border-radius: 4px;
+        background-color: #f2f2f2;
+        background-image: linear-gradient(#ffffff, #f4f4f4);
+    }
+}
+}
+#footer {
+  .foot_top {
+      background: #efefef;
+      margin-top: 10px;
+      height: 34px;
+      border-top: 1px solid #ccc;
+      border-bottom: 1px solid #ccc;
+      line-height: 34px;
+      >a {
+          float: left;
+          font-size: 14px;
+          border-right: 1px solid #ccc;
+          width: 30%;
+          text-align: center;
+          &:last-child {
+              width: 40%;
+              border-right: 0;
+            
+          }
+          
+      }
+  }
+  .footer {
+      background: #efefef;
+      text-align: center;
+      font-size: 12px;
+      padding: 15px 0;
+      color: #666;
+      >p {
+          font-size: 12px;
+          margin-bottom: 0px;
+          .app {
+              color: red;
+          }
+      }
+  }
+}
+.dazhuanpan {
+    position: fixed;
+    top: 300px;
+    right: 0px;
+    z-index: 999;
+    width: 50px;
+    height: 53px;
+    .LotteryImg {
+        width: 100%;
+        height: 100%;
+        >a {
+            display: block;
+            >img {
+                    width: 100%;
+                }
+        }
+    }
+}
+
+
